--- a/OtherXmlEditor/pom.xml
+++ b/OtherXmlEditor/pom.xml
@@ -93,4 +93,16 @@
   	</pluginManagement>
   </build>
   
+  
+  <dependencies>
+  
+  	<dependency>
+		<groupId>net.sf.opencsv</groupId>
+		<artifactId>opencsv</artifactId>
+		<version>2.3</version>
+	</dependency>
+	
+  </dependencies>
+  
+  
 </project>
