--- a/OtherXmlEditor/pom.xml
+++ b/OtherXmlEditor/pom.xml
@@ -96,10 +96,18 @@
   
   <dependencies>
   
+  	<!-- Dependencies for opencsv -->
   	<dependency>
 		<groupId>net.sf.opencsv</groupId>
 		<artifactId>opencsv</artifactId>
 		<version>2.3</version>
+	</dependency>
+	
+	<!-- Dependencies for velocity -->
+	<dependency>
+		<groupId>org.apache.velocity</groupId>
+		<artifactId>velocity</artifactId>
+		<version>1.7</version>
 	</dependency>
 	
   </dependencies>
