--- a/OtherJUnitJsJasmine/pom.xml
+++ b/OtherJUnitJsJasmine/pom.xml
@@ -107,7 +107,26 @@
 			            	  </configuration>
 					        </execution>					        
 					     </executions>			              
-			        </plugin>			        
+			        </plugin>
+			        
+			        <!-- Unit tests for js -->
+			        <plugin>
+				      <groupId>com.github.searls</groupId>
+				      <artifactId>jasmine-maven-plugin</artifactId>
+				      <version>1.3.1.3</version>
+				      <executions>
+				        <execution>
+				          <goals>
+				            <goal>test</goal>
+				          </goals>
+				        </execution>
+				      </executions>
+				      <configuration>
+				        <jsSrcDir>${project.basedir}/src/main/webapp/js</jsSrcDir>
+						<jsTestSrcDir>${project.basedir}/src/test/webapp/js</jsTestSrcDir>
+				      </configuration>
+				    </plugin>
+				    		        
 				</plugins>
 			</build>			
 		</profile>
