--- a/OtherJUnitJsJasmine/pom.xml
+++ b/OtherJUnitJsJasmine/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>OtherJUnitJsJasmine</artifactId>
     <packaging>war</packaging>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Servlet 3 Web Application</name>
+    <name>JUnit test for java script</name>
     <url>http://maven.apache.org</url>
 
 
@@ -16,7 +16,10 @@
         <project.properties.file>project.properties</project.properties.file>
         <version.org.jboss.arquillian>1.1.4.Final</version.org.jboss.arquillian>
 		<version.org.jboss.arquillian.drone>1.3.0.Final</version.org.jboss.arquillian.drone>
+		
+		<sonar.language>js</sonar.language>
     </properties>
+    
     
     
     <profiles>
@@ -89,7 +92,7 @@
 			            <configuration>			            	
 			                <skip>true</skip>			                
 			            </configuration>
-			            <executions>
+			            <!-- executions>
 					       <execution>
 					          <id>unit-tests</id>
 					          <phase>test</phase>
@@ -106,7 +109,7 @@
             					</excludes>			                
 			            	  </configuration>
 					        </execution>					        
-					     </executions>			              
+					     </executions -->			              
 			        </plugin>
 			        
 			        <!-- Unit tests for js -->
@@ -124,6 +127,22 @@
 				      <configuration>
 				        <jsSrcDir>${project.basedir}/src/main/webapp/js</jsSrcDir>
 						<jsTestSrcDir>${project.basedir}/src/test/webapp/js</jsTestSrcDir>
+						<junitXmlReportFileName>TEST-jasmine.xml</junitXmlReportFileName>
+						
+						<!-- preloadSources>
+						    <source>src/main/webapp/js/jquery-1.9.1.js</source>
+						    <source>src/main/webapp/js/jquery-ui-1.10.3.custom.js</source>
+						  </preloadSources -->
+						
+						<!-- sourceIncludes>
+							<include>script.js</include>
+						</sourceIncludes -->
+						
+						<!-- sourceExcludes>
+							<exclude>jquery-1.9.1.js</exclude>
+							<exclude>jquery-ui-1.10.3.custom.js</exclude>
+						</sourceExcludes -->
+						
 				      </configuration>
 				    </plugin>
 				    		        
@@ -135,9 +154,6 @@
 		Runs integration tests. -->
 		<profile>
 			<id>intg</id>
-			<activation>
-		        <activeByDefault>true</activeByDefault>
-		    </activation>
 			
 			<properties>
 				<!-- Test intg data -->
