--- a/OtherJUnitJsJasmine/pom.xml
+++ b/OtherJUnitJsJasmine/pom.xml
@@ -17,9 +17,21 @@
         <version.org.jboss.arquillian>1.1.4.Final</version.org.jboss.arquillian>
 		<version.org.jboss.arquillian.drone>1.3.0.Final</version.org.jboss.arquillian.drone>
 		
+		<jsSources.relative>src/main/webapp/js</jsSources.relative>
+		
 		<sonar.language>js</sonar.language>
-		<sonar.sources>${project.basedir}/src/main/webapp/js</sonar.sources>
+		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+		<sonar.sources>${project.basedir}/${jsSources.relative}</sonar.sources>
 		<sonar.exclusions>**/jquery-1.9.1.js,**/jquery-ui-1.10.3.custom.js</sonar.exclusions>
+		
+		<saga.output.dir>${project.build.directory}/coverage</saga.output.dir>
+		<saga.output.coverage.file>${saga.output.dir}/total-coverage.dat</saga.output.coverage.file>
+		<saga.output.coverage.sonar.lcov.file>${saga.output.dir}/coverage.lcov</saga.output.coverage.sonar.lcov.file>
+		
+		<sonar.javascript.reportsPath>${saga.output.dir}</sonar.javascript.reportsPath>
+		<sonar.javascript.jstestdriver.reportsPath>${saga.output.dir}</sonar.javascript.jstestdriver.reportsPath>
+		<sonar.javascript.coveragePlugin>lcov</sonar.javascript.coveragePlugin>
+		<sonar.javascript.lcov.reportPath>${saga.output.coverage.sonar.lcov.file}</sonar.javascript.lcov.reportPath>
     </properties>
     
     
@@ -158,7 +170,7 @@
 				      </executions>
 				      <configuration>
 				        <baseDir>http://localhost:${jasmine.serverPort}</baseDir>
-				        <outputDir>${project.build.directory}/coverage</outputDir>
+				       <outputDir>${saga.output.dir}</outputDir>
 				        <noInstrumentPatterns>
 				        	<pattern>.*/spec/.*</pattern>
 				          	<pattern>.+/jquery-1.9.1\.js</pattern>
@@ -166,6 +178,32 @@
 				        </noInstrumentPatterns>
 				      </configuration>
 				    </plugin>
+
+					<plugin>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<version>1.7</version>
+						<executions>
+							<execution>
+								<id>saga-to-sonar-lcov</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>run</goal>
+								</goals>
+								<configuration>
+									<target>
+										<echo
+											message="setting up sonar lcov file (from saga): ${saga.output.coverage.sonar.lcov.file} ..." />
+										<copy file="${saga.output.coverage.file}" tofile="${saga.output.coverage.sonar.lcov.file}" />
+				
+										<echo
+											message="replacing '${saga.output.lcov.source.dir.path} with '${sonar.lcov.source.dir.path}' in ${saga.output.coverage.sonar.lcov.file}" />
+										<replace file="${saga.output.coverage.sonar.lcov.file}"
+											token="SF:http://localhost:${jasmine.serverPort}/src/" value="SF:${jsSources.relative}/" />
+									</target>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
 				    		        
 				</plugins>
 			</build>			
